<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nome_medicamento" />

    <EditText
        android:id="@+id/edtDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_descricao_medicamento" />

    <EditText
        android:id="@+id/edtHorario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_horario_medicamento" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_salvar" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_voltar" />

</LinearLayout>
